--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/public/build/css/style.css">
+<link rel="stylesheet" href="/public/build/css/inicio.css">
 
 <header class="header">
 
