--- a/index.html
+++ b/index.html
@@ -167,10 +167,11 @@
     <div class="texto">
         <h3 class="h3-small" style="font-size: 3rem;">Profesionales al cuidado de tu salud dental</h3>
         <p class="parrafo-p">
-            Nuestro equipo de profesionales está altamente capacitado para brindarte la mejor atención y cuidado de tu salud dental, 
-            contamos con especialistas en todas las áreas de la odontología, 
-            por lo que podrás encontrar todo lo que necesitas en un solo lugar.
+            Nuestro equipo de profesionales está altamente capacitado para brindarte la mejor atención y cuidado de tu salud dental,<br> 
+            contamos con especialistas en todas las áreas de la odontología,por lo que podrás encontrar todo lo que necesitas en un solo lugar.
         </p>
+
+       
     </div>
     
 </div>
